<resources>
    <string name="app_name">Demo</string>

    <string name="actionbar_title">Highway Next</string>

    <string name="phoneNumber">Phone Number</string>

    <string name="password">PIN</string>

    <string name="prefixTextOfPhoneNumber">+880</string>

    <string name="summation">Summation</string>

    <string name="multiplication">Multiplication</string>

    <string name="editText1Hint">First Number</string>

    <string name="editText2Hint">Second Number</string>

    <string name="toastPhoneNumberMissing">Phone Number is required</string>

    <string name="toastPasswordMissing">PIN is required</string>

    <string name="exceptionHandlingToast">Field are required</string>

    <string name="heading">Login System</string>

    <string name="slogan">Success is a journey, not a destination</string>

    <string name="login">Login</string>

    <string name="logout">Logout</string>

    <string name="loginButtonClickedText">Login button is clicked.</string>

    <string name="logoutButtonClickedText">Logout button is clicked.</string>

    <string name="loginSuccessfulToast">Successfully logged in</string>

    <string name="loginUnsuccessfulToast">Phone number or PIN mismatched</string>
</resources>